# unet-expriment

./: .gitignore  README.md  auto_update.py  dataset.py  download_datasets.sh  download_osf.py  evaluate_3d.py  fix_checkpoints_and_readme.py  launch_training.sh  launch_training_v7.sh  loss.py  main.py  model.py  plot_metrics.py  preprocess_verse.py  pyproject.toml  readme_osf.txt  unet.py
