[project]
name = "unet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "matplotlib>=3.8.0",
    "nibabel>=5.2.1",
    "pydicom>=2.4.4",
    "scipy>=1.12.0",
    "tqdm>=4.66.0",
]
